--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -5,7 +5,7 @@ GameName=MyProject2
 r.MobileHDR=False
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/2DSideScrollerBP/Maps/2DSideScrollerExampleMap
+EditorStartupMap=/Game/Level/Level1.Level1
 TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
