--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,7 +1,9 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=D59C8A2D411A955D111601AE121D5EE7
 ProjectName=2D Side Scroller Game Blueprint Template
+ProjectDisplayedTitle=NSLOCTEXT("[/Script/EngineSettings]", "AAF157594709621D133327950526BE5F", "Not To Close")
 
 [StartupActions]
 bAddPacks=True
 InsertPack=(PackSource="StarterContent.upack",PackName="StarterContent")
+
